tests/cases/negative/import-not-at-start.frtl
x = 1.0
import math
it = x
